# BoMI-py

./: .gitignore  404.html  MANIFEST.in  README.md  cursor.py  emg_meta.json  emg_meta_excitability.json  emg_meta_excitability_TA.json  index.html  main.py  mkdocs.yml  requirements.txt  setup.cfg  sitemap.xml  test_trigno_sdk.py
.github/workflows/: build-docs.yml
bomi/: __init__.py  __main__.py  base_widgets.py  colors.py  cursor.py  datastructure.py  device_manager.py  device_manager_widget.py  keyboard_widget.py  main.py  main.py.88620731f96c0eb3d83bad231d4e8638.py  painter_widget.py  reaching_widget.py  sample_3d_widget.py  sample_3d_window.py  sample_plot_widget.py  sample_plot_window.py  scope_widget.py  sr_precision_widget.py  start_react_widget.py  window_mixin.py  yost_serial_comm.py
bomi/audio/: generate_tone.py  generator.py  player.py
bomi/device_managers/: QTM_manager.py  __init__.py  analog_streaming_client.py  protocols.py  qtm_manager.py  qtm_streaming_client.py  qtm_widget.py  table_model.py  (+5 more)
css/: custom.css
develop/: index.html
docs/: develop.md  index.md  install.md  installation.md  overview.md  start-react.md
install/: index.html
installation/: index.html
js/: custom.js
overview/: index.html
search/: search_index.json
start-react/: index.html
startreact/: pyvenv.cfg
threespace_api/: __init__.py  threespace_utils.py  win32_threespace_utils.py
trigno_sdk/: __init__.py  client.py  trigno_device_manager.py  trigno_sdk_client.py
trigno_sdk_client/: trigno_sdk_client.py
yost/: threespace_api.py  win32_threespace_utils.py
(+17 files in other folders)
