[metadata]
name = BoMI
version = attr: bomi.__version__

[options]
packages = 
    bomi
    threespace_api
    trigno_sdk
include_package_data = True
install_requires = 
    black>=21.12b0
    numpy>=1.22.0
    PyOpenGL
    pyqtgraph==0.12.3
    pyserial==3.5
    PySide6==6.2.3
    scipy==1.7.3

[options.package_data]
trigno_sdk = *.tsv

[options.entry_points]
console_scripts = 
    bomi = bomi.main:main
