[metadata]
name = BoMI
version = attr: bomi.__version__

[options]
python_requires = >=3.10
packages = find:
include_package_data = True
install_requires =
    numpy
    scipy
    pyserial~=3.5
    PyOpenGL
    pyqtgraph~=0.12.3
    PySide6~=6.2
    qtm

[options.extras_require]
dev = black; mypy; types-setuptools

[options.package_data]
trigno_sdk = *.tsv

[options.entry_points]
console_scripts = 
    bomi = bomi.main:main
