[metadata]
name = BoMI
version = attr: bomi.__version__

[options]
python_requires = >=3.10
packages = find:
include_package_data = True
# We get an error if we use PySide 6.5 or above.
# https://github.com/SeanezLab/BoMI-StartReact/issues/20
install_requires =
    numpy
    scipy
    pyserial~=3.5
    PyOpenGL
    pyqtgraph~=0.12.3
    PySide6>=6.2, <6.5
    qtm

# To install dev dependencies, run:
# pip install -e .[dev]
[options.extras_require]
dev = black; mypy; types-setuptools; pytest

[options.package_data]
trigno_sdk = *.tsv

[options.entry_points]
console_scripts = 
    bomi = bomi.main:main
